--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-slate
 title: Richard (RJ) Gary
+description: Dec. 2019 University of Georgia Finance & International Business Graduate Seeking a Full-Time Role in the U.S., Canada, or Europe
