--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-title: Richard (RJ) Gary
-description: Dec. 2019 University of Georgia Finance & International Business Graduate Seeking a Full-Time Role in the U.S., Canada, or Europe
+title: myTestTitle
+description: myTestDescription
+# title: Richard (RJ) Gary
+# description: Dec. 2019 University of Georgia Finance & International Business Graduate Seeking a Full-Time Role in the U.S., Canada, or Europe
 theme: jekyll-theme-slate
